<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_constraint_layout_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">


    <ImageButton
        android:id="@+id/left_button"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/down_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/up_button"
        app:srcCompat="@drawable/ic_keyboard_arrow_left_background"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:id="@+id/right_button"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/down_button2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/up_button2"
        app:srcCompat="@drawable/ic_keyboard_arrow_right_background"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:id="@+id/up_button"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:scaleType="fitCenter"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_keyboard_arrow_up_background"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:id="@+id/up_button2"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:scaleType="fitCenter"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_keyboard_arrow_up_background"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:id="@+id/down_button"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/colorPrimary"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:srcCompat="@drawable/ic_keyboard_arrow_down_background"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:id="@+id/down_button2"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorPrimary"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/ic_keyboard_arrow_down_background"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/image_view_icon_big"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/left_button"
        app:layout_constraintRight_toLeftOf="@+id/right_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.496"
        app:srcCompat="@drawable/ic_hearing_accent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/level_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/current_level_text"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/down_button"
        app:layout_constraintRight_toLeftOf="@+id/down_button2"
        app:layout_constraintTop_toBottomOf="@+id/image_view_icon_big" />

    <TextView
        android:id="@+id/fieldcount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Field: "
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/down_button"
        app:layout_constraintRight_toLeftOf="@id/level_text_view"
        app:layout_constraintTop_toBottomOf="@id/image_view_icon_big" />

    <TextView
        android:id="@+id/exercisecount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Quests: "
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/level_text_view"
        app:layout_constraintRight_toLeftOf="@id/down_button2"
        app:layout_constraintTop_toBottomOf="@id/image_view_icon_big" />

    <TextView
        android:id="@+id/score_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="196dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorAccent"
        android:textSize="25sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/points_text" />

    <TextView
        android:id="@+id/time_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="196dp"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/background_light"
        android:textSize="25sp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_text" />

    <TextView
        android:id="@+id/points_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="196dp"
        android:layout_marginTop="24dp"
        android:text="@string/points_text"
        android:textColor="@color/colorAccent"
        android:textSize="25sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="196dp"
        android:layout_marginTop="24dp"
        android:text="@string/time_text"
        android:textColor="@android:color/background_light"
        android:textSize="25sp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>